[tool.poetry]
name = "movies"
version = "0.1.0"
description = "movies"
authors = ["Gledi Caushaj <gledi.alb@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.3.22"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "^0.17.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
pytest = "^6.2.2"
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
